# custom-spec-loaders

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pytest.yml
src/specloaders/: devred_loader.py
src/specloaders/loaders/: devred_loader.py  larionov_loader.py
tests/: test_devred.py  test_larionov.py
