[tool.poetry]
name        = "custom-spec-loaders"
version     = "0.1.0"
description = "A collection of Specutils Spectrum1D loaders"
authors     = ["Melissa Hallum <mhallum@bu.edu>"]
readme      = "README.md"
packages    = [{ include = "specloaders", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
specutils = "^1.12.0"
astropy = "^6.0.0"
click = "^8.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
